--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/pg": "^7.14.5",
+    "express-joi-validation": "^5.0.0",
+    "joi": "^17.3.0",
+    "pg": "^8.4.2",
     "source-map-support": "^0.5.10"
   },
   "devDependencies": {
