--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@types/pg": "^7.14.5",
+    "dotenv": "^8.2.0",
     "express-joi-validation": "^5.0.0",
     "joi": "^17.3.0",
     "pg": "^8.4.2",
@@ -22,6 +23,7 @@
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "jest": "^26.6.1",
     "serverless-aws-documentation": "^1.1.0",
+    "serverless-dotenv-plugin": "^3.1.0",
     "serverless-webpack": "^5.2.0",
     "ts-jest": "^26.4.3",
     "ts-loader": "^5.3.3",
